[gd_scene load_steps=4 format=3 uid="uid://cyj73muy4ysx2"]

[ext_resource type="Script" uid="uid://bnm23hv04nb27" path="res://scenes/thread_handler/thread_tooltip.gd" id="1_1l37o"]
[ext_resource type="Texture2D" uid="uid://cv1j6a1gyacww" path="res://art/relic_anvil.png" id="2_hdvie"]
[ext_resource type="FontFile" uid="uid://dkc0wbxtwj6ao" path="res://art/Font Styles/MedodicaRegular.otf" id="3_kspcv"]

[node name="ThreadTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1l37o")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.764706)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -50.0
offset_right = 250.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ThreadIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_hdvie")
stretch_mode = 5

[node name="ThreadDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("3_kspcv")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Thread Tooltip Thread Tooltip Thread Tooltip Thread Tooltip Thread Tooltip Thread Tooltip Thread Tooltip Thread Tooltip "
fit_content = true
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
